objects/vlocity_cmt__OrderPayment__c.object
<CustomObject>
    <description>Defines the type of payment event received from the payment gateway.</description>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <description>The Order of the customer who made the payment</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>OrderPayments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentAmount__c</fullName>
        <description>The amount received.</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentEventIdentifier__c</fullName>
        <description>Payment transaction reference id</description>
        <externalId>true</externalId>
        <label>Payment Event</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentEventStatus__c</fullName>
        <description>Status from payment gateway ex: Success or Failure</description>
        <label>Payment Event Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentEventType__c</fullName>
        <description>Defines the state of this payment received from Gateway</description>
        <label>Payment Event Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentMethodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Payment Method used in the Payment event</description>
        <label>Payment Method</label>
        <referenceTo>vlocity_cmt__PaymentMethod__c</referenceTo>
        <relationshipName>OrderPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Payment</label>
    <nameField>
        <label>Order Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>